Adjusted VoiceManager to be a Command